# fed-causal

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-estimation-window-only-market-model.md  0002-placebo-as-primary-significance.md  0003-multiple-testing-correction.md  0004-honest-heterogeneity-not-alpha.md  0005-pit-universe.md  README.md
scripts/: build_reference.py
src/fedcausal/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _rng.py  _typing.py  _validation.py  cli.py  plots.py  serve.py
src/fedcausal/artifacts/: README.md  __init__.py  reference.json
src/fedcausal/data/: __init__.py  loaders.py  synthetic.py
src/fedcausal/data_providers/: __init__.py  polygon.py
src/fedcausal/did/: __init__.py  heterogeneity.py  model.py
src/fedcausal/evaluation/: __init__.py  hac.py  multiple_testing.py  verdict.py
src/fedcausal/events/: __init__.py  calendar.py  calendar_data.py  windows.py
src/fedcausal/eventstudy/: __init__.py  abnormal.py  placebo.py  tests.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/parity/: test_parity_did.py  test_parity_event_study.py  test_parity_eventstudy.py  test_parity_multiple_testing.py
tests/property/: test_events_windows.py  test_eventstudy_invariants.py  test_invariants.py
tests/regression/: test_regression_eventstudy.py  test_regression_honest_null.py
tests/unit/: test_cli.py  test_data.py  test_did.py  test_events.py  test_eventstudy.py  test_import_purity.py  test_multiple_testing.py  test_plots.py  test_scaffold_smoke.py  test_serve.py  test_verdict.py
