[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-causal"
version = "0.1.0"
description = "Leakage-free causal inference on FOMC announcements: estimation-window-only event study + BMP + HAC + placebo-date randomization + rate-sensitivity DiD, with a PURE honest-NULL tradability verdict. Torch-free (numpy/scipy/statsmodels)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "causal-inference",
    "event-study",
    "econometrics",
    "difference-in-differences",
    "fomc",
    "monetary-policy",
    "honest-null",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
# Pure-econometrics core: numpy/scipy/statsmodels only. NO torch/onnx/onnxruntime/sklearn.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/fed-causal"
Changelog = "https://github.com/FatihHekim0glu/fed-causal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Optional real-data path (keyless FRED CSV + Polygon PIT) + caching.
# Pure event-study/HAC/DiD/placebo are numpy/scipy/statsmodels; httpx/pyarrow/
# diskcache are only used by the lazy real-data loaders. NO torch/onnx.
data = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "diskcache>=5.6",
]
# Plotly figure builders (figures serialize to {data, layout} JSON) + static export.
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Typer CLI (lazily imported inside fedcausal.cli only).
cli = [
    "typer>=0.12",
]
# Developer + parity-oracle + lint/type/test stack.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
# NOTE: there is deliberately NO `[all]` extra and NO torch/onnx/onnxruntime
# anywhere — this is a lean, torch-free econometrics tool.

[project.scripts]
fedcausal = "fedcausal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fedcausal"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fedcausal",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "CITATION.cff",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
    "PD901",   # allow `df` as a variable name in compute kernels
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (T, N, CAR) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (sample count T/N, CAR matrices) are intentional.
extend-ignore-names = ["N", "T", "AR", "CAR", "SAR"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/fedcausal"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "statsmodels.*",
    "diskcache.*",
    "plotly.*",
    "httpx.*",
    "typer.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference implementation",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (synthetic, no network)",
    "slow: long-running tests",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["fedcausal"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
